--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -16,10 +16,13 @@ dependencies:
   fluttertoast: ^8.0.6
   provider: ^5.0.0
   table_calendar: ^3.0.0
+
   fluro: ^2.0.3
 
   sqflite: ^2.0.0+3
   path_provider: ^2.0.1
+
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
