--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -24,9 +24,13 @@ dependencies:
 
   shared_preferences: ^2.0.5
 
+  kiwi: ^2.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.10.0
+  kiwi_generator: ^2.1.1
 
 flutter:
   uses-material-design: true
