--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  fluttertoast: ^8.0.6
+  fluttertoast: ^8.0.7
   provider: ^5.0.0
   table_calendar: ^3.0.0
 
@@ -26,12 +26,16 @@ dependencies:
   shared_preferences: ^2.0.5
 
   kiwi: ^2.1.1
+  json_annotation: ^3.1.0
+
+  persistent_bottom_nav_bar: ^4.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.10.0
   kiwi_generator: ^2.1.1
+  json_serializable: ^3.5.0
 
 flutter:
   uses-material-design: true
