--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -11,31 +11,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  animations: ^2.0.0
   cupertino_icons: ^1.0.2
-  fluttertoast: ^8.0.7
-  provider: ^5.0.0
-  table_calendar: ^3.0.0
-
   fluro: ^2.0.3
   flutter_svg: ^0.22.0
-
-  sqflite: ^2.0.0+3
-  path_provider: ^2.0.1
-
-  shared_preferences: ^2.0.5
-
-  kiwi: ^2.1.1
+  fluttertoast: ^8.0.7
   json_annotation: ^3.1.0
-
+  kiwi: ^2.1.1
+  path_provider: ^2.0.1
   persistent_bottom_nav_bar: ^4.0.2
+  provider: ^5.0.0
+  shared_preferences: ^2.0.5
+  sqflite: ^2.0.0+3
+  table_calendar: ^3.0.0
+  badges: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.10.0
-  kiwi_generator: ^2.1.1
   json_serializable: ^3.5.0
+  kiwi_generator: ^2.1.1
 
 flutter:
   uses-material-design: true
