--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -6,35 +6,33 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+    sdk: ">=2.17.1 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-  animations: ^2.0.0
-  cupertino_icons: ^1.0.2
-  fluro: ^2.0.3
-  flutter_svg: ^0.22.0
-  fluttertoast: ^8.0.7
-  json_annotation: ^3.1.0
-  kiwi: ^2.1.1
-  path_provider: ^2.0.1
-  persistent_bottom_nav_bar: ^4.0.2
-  provider: ^5.0.0
-  shared_preferences: ^2.0.5
-  sqflite: ^2.0.0+3
-  table_calendar: ^3.0.0
-  badges: ^2.0.1
+    flutter:
+        sdk: flutter
+    animations: ^2.0.0
+    cupertino_icons: ^1.0.2
+    fluro: ^2.0.3
+    flutter_svg: ^1.1.1+1
+    fluttertoast: ^8.0.7
+    json_annotation: ^4.6.0
+    kiwi: ^4.0.2
+    path_provider: ^2.0.1
+    provider: ^6.0.3
+    shared_preferences: ^2.0.5
+    sqflite: ^2.0.0+3
+    table_calendar: ^3.0.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  build_runner: ^1.10.0
-  json_serializable: ^3.5.0
-  kiwi_generator: ^2.1.1
+    flutter_test:
+        sdk: flutter
+    build_runner: ^2.1.11
+    json_serializable: ^6.3.1
+    kiwi_generator: ^4.0.2
 
 flutter:
-  uses-material-design: true
+    uses-material-design: true
 
-  assets:
-    - assets/
+    assets:
+        - assets/
