--- a/todo_app/android/app/src/main/AndroidManifest.xml
+++ b/todo_app/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.todo_app">
+    package="com.technovert.todovert">
    <application
-        android:label="todo_app"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Todovert"
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
