--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -30,6 +30,12 @@ dev_dependencies:
     build_runner: ^2.1.11
     json_serializable: ^6.3.1
     kiwi_generator: ^4.0.2
+    flutter_launcher_icons: "^0.13.0"
+
+flutter_icons:
+  android: "launcher_icon"
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 flutter:
     uses-material-design: true
